--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&amp;family=Karla:wght@400;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js" type="module"> </script>
     <title>Insure Landing Page</title>
   </head>
   <body class="body">
